@@ -10,6 +10,7 @@ public:
   virtual bool OnMessage(CGUIMessage& message);
 
 protected:
+  virtual bool GetDirectory(const CStdString &strDirectory, CFileItemList &items);
   virtual void UpdateButtons();
   virtual void OnPopupMenu(int iItem);
   virtual void DoSearch(const CStdString& strSearch, CFileItemList& items);
